[gd_scene load_steps=5 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://шахматная-доска-png-.png" type="Texture" id=2]
[ext_resource path="res://new_game.tscn" type="PackedScene" id=3]
[ext_resource path="res://new_game.gd" type="Script" id=4]

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 210, 210 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="button" type="KinematicBody2D" parent="."]

[node name="button" parent="button" instance=ExtResource( 3 )]
margin_left = 146.0
margin_top = 470.0
margin_right = 270.0
margin_bottom = 494.0
script = ExtResource( 4 )

[node name="Button" type="Button" parent="button"]
margin_left = 142.42
margin_top = 421.358
margin_right = 273.42
margin_bottom = 441.358
text = "To the hall of fame"

[node name="menu" type="Button" parent="."]
margin_left = 7.0
margin_top = 474.0
margin_right = 55.0
margin_bottom = 494.0
text = "Menu"
[connection signal="button_down" from="button/button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="button/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="menu" to="." method="_on_menu_button_down"]
